# gradle-cmake-swig-starter

./: CMakeLists.txt  README.md  settings.gradle
example/: CMakeLists.txt  build.gradle
example/src/main/cpp/: exampleJAVA_wrap.cxx
example/src/main/java/io/jiffy/gradle/cmake/swig/starter/: Callback.java  Caller.java  example.java  exampleJNI.java
example/src/main/swig/: example.i  example_exception.i  java_exceptions.i
example/src/test/java/io/jiffy/gradle/cmake/swig/starter/: ExampleTest.java
lib/: CMakeLists.txt
lib/src/main/java/io/jiffy/gradle/cmake/swig/starter/: Library.java
lib/src/main/swig/: java_exceptions.i  lib.i
lib/src/test/java/io/jiffy/gradle/cmake/swig/starter/: LibraryTest.java
